syntax = "proto3";
option go_package = "pkg/structs";

import "common.proto";
import "errors.proto";

message ActorStatus {
}

message Actor {
    // standard values
    string Id = 1;
    string Etag = 2;
    string World = 3;
    map<string, string> Labels = 4;
    map<string, double> Attributes = 5;
    string Type = 6;

    // Guiding principals
    map<string, double> Ethos = 7; // how much the person values each ethos
    map<string, double> Goals = 8; // how much the person values each goal

    // Learned skills
    map<string, double> Professions = 9;
    // map<string, double> Ranks ; // ranks in faction(s)

    //
    string Race = 10;
    string Culture = 11;

//    repeated Relationship Allies = 12;
//    repeated Relationship Enemies = 13;

    uint64 BirthTick = 14;
    uint64 DeathTick = 15;
    uint64 ExpectedDeathTick = 16; // expected death via natural causes
    optional Metaref DeathCause = 17;

    // roughly where the person lives & operates in the world
    string Area = 18;

    optional ActorStatus Status = 19;
}

message GetActorsRequest {
    repeated string Ids = 1;
    string World = 2;
}

message GetActorsResponse {
    repeated Actor Data = 1;
    optional Error Error = 2;
}

message SetActorsRequest {
    repeated Actor Data = 1;
    string World = 2;
}

message SetActorsResponse {
    string Etag = 1;
    optional Error Error = 2;
}

message DeleteActorRequest {
    string Id = 1;
    string World = 2;
}

message DeleteActorResponse {
    optional Error Error = 2;
}

message ListActorsRequest {
    optional uint64 Limit = 1;
    optional uint64 Offset = 2;
    map<string, string> Labels = 3;
    string World = 4;
}

message ListActorsResponse {
    repeated Actor Data = 1;
    optional Error Error = 2;
}

