syntax = "proto3";
option go_package = "pkg/structs";

import "metadata.proto";
import "errors.proto";

message WorldStatus {
}

message World {
    string Id = 1;
    string Etag = 2;
    string Name = 3;
    map<string, string> Labels = 4;
    map<string, int64> Attributes = 5;

    int64 Tick = 6;

    WorldStatus Status = 7;
}

message GetWorldsRequest {
    repeated string Ids = 1;
}

message GetWorldsResponse {
    repeated World Data = 1;
    optional Error Error = 2;
}

message SetWorldRequest {
    World Data = 1;
}

message SetWorldResponse {
    string Etag = 1;
    optional Error Error = 2;
}

message DeleteWorldRequest {
    string Id = 1;
}

message DeleteWorldResponse {
    optional Error Error = 1;
}

message ListWorldsRequest {
    optional uint32 Limit = 1;
    optional uint32 Offset = 2;
    map<string, string> Labels = 3;
}

message ListWorldsResponse {
    repeated World Data = 1;
    optional Error Error = 2;
}

